--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -6,10 +6,15 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
+  workflow_dispatch: # permet de lancer manuellement le workflow
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: BE  # Définit le dossier de travail pour toutes les commandes
 
     steps:
       # Étape 1 : Cloner le dépôt
