--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,12 +1,11 @@
 name: CI-CD Spring Boot - BE-pharmacy
 
-# Déclenche le workflow à chaque push ou PR sur la branche main
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch: # permet de lancer manuellement le workflow
+  workflow_dispatch:
 
 jobs:
   build:
@@ -14,21 +13,18 @@ jobs:
 
     defaults:
       run:
-        working-directory: BE  # Définit le dossier de travail pour toutes les commandes
+        working-directory: BE
 
     steps:
-      # Étape 1 : Cloner le dépôt
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # Étape 2 : Installer Java 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: 17
 
-      # Étape 3 : Cache Maven pour accélérer les builds
       - name: Cache Maven packages
         uses: actions/cache@v3
         with:
@@ -37,25 +33,23 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      # Étape 4 : Build Maven avec le wrapper
-      - name: Build with Maven
-        run: ./mvnw clean install -B
+      - name: Verify mvnw permissions
+        run: ls -l ./mvnw
 
-      # Étape 5 : Exécuter les tests unitaires
-      - name: Run tests
-        run: ./mvnw test -B
+      - name: Build and package Maven project
+        run: ./mvnw clean package -B
 
-      # Étape 6 : Créer le package jar
-      - name: Package jar
-        run: ./mvnw package -B
-
-      # Étape 7 : Afficher le contenu du dossier target
       - name: List target folder
         run: ls -l target/
 
-      # Étape 8 (optionnelle) : Build Docker image
+      - name: Upload JAR as artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: be-pharmacy-jar
+          path: target/*.jar
+
       - name: Build Docker image
         if: github.event_name == 'push'
         run: |
-          docker build -t be-pharmacy:latest .
+          docker build --file Dockerfile.yml --tag be-pharmacy:latest --pull .
           echo "Docker image be-pharmacy:latest built successfully!"
