--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -8,53 +8,94 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  # ---------------------------------------------
+  # Backend (Spring Boot) build
+  # ---------------------------------------------
+  backend:
     runs-on: ubuntu-latest
 
-    steps:
-      # 1. Checkout
-      - uses: actions/checkout@v3
+    defaults:
+      run:
+        working-directory: BE  # dossier backend
 
-      # -------------------
-      # Backend Spring Boot
-      # -------------------
-      - name: Set up JDK 8
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           distribution: temurin
-          java-version: 8
+          java-version: 17
 
-      - name: Verify mvnw permissions
-        run: ls -l BE/mvnw
+      - name: Cache Maven packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-
 
-      - name: Build Backend
-        working-directory: BE
+      - name: Make mvnw executable
+        run: chmod +x ./mvnw
+
+      - name: Build and package Maven project
         run: ./mvnw clean package -B
 
-      - name: Upload BE JAR
+      - name: List target folder
+        run: ls -l target/
+
+      - name: Upload JAR as artifact
         uses: actions/upload-artifact@v4
         with:
           name: be-pharmacy-jar
-          path: BE/target/*.jar
+          path: target/*.jar
 
-      # -------------------
-      # Frontend Angular
-      # -------------------
-      - name: Set up Node.js
+      - name: Build Docker image (optional)
+        if: github.event_name == 'push'
+        run: |
+          docker build --file Dockerfile.yml --tag be-pharmacy:latest --pull .
+          echo "Docker image be-pharmacy:latest built successfully!"
+
+  # ---------------------------------------------
+  # Frontend (Angular) build
+  # ---------------------------------------------
+  frontend:
+    runs-on: ubuntu-latest
+    needs: backend   # Attend que le backend soit construit
+
+    defaults:
+      run:
+        working-directory: FE  # dossier frontend
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20'
+          node-version: 18
 
-      - name: Install Angular dependencies
-        working-directory: FE
+      - name: Cache node modules
+        uses: actions/cache@v3
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('FE/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - name: Install dependencies
         run: npm install
 
-      - name: Build Angular
-        working-directory: FE
+      - name: Build Angular project
         run: npm run build -- --prod
 
-      - name: Upload Angular build
+      - name: List Angular dist folder
+        run: ls -l dist/
+
+      - name: Upload Angular build artifact
         uses: actions/upload-artifact@v4
         with:
-          name: fe-build
-          path: FE/dist/
+          name: fe-pharmacy-dist
+          path: dist/
